--- a/client/src/assests/css/sass/_main.scss
+++ b/client/src/assests/css/sass/_main.scss
@@ -17,3 +17,28 @@ body {
   font-weight: 400;
   line-height: 1.6;
 }
+
+li {
+  list-style: none;
+}
+
+button {
+  &:focus {
+    transform: translateY(0px);
+  }
+
+  &:active {
+    transform: translateY(3px);
+  }
+}
+
+a {
+  &:hover {
+    text-decoration: none;
+  }
+}
+
+ul {
+  margin: 0px;
+  padding: 0px;
+}
