--- a/client/src/assests/css/sass/gallery.scss
+++ b/client/src/assests/css/sass/gallery.scss
@@ -43,8 +43,8 @@
       // border: 1px solid #f1f1f1;
       box-shadow: 4px 6px 8px #b6b6b6;
       overflow: hidden;
-      border-radius: 4px;
-      padding: 0.8rem;
+      border-radius: 6px;
+      padding: 0.6rem 0.6rem 0.4rem 0.6rem;
 
       @media (max-width: 1550px) {
         margin: .5rem;
