--- a/client/src/assests/css/home.css
+++ b/client/src/assests/css/home.css
@@ -49,6 +49,10 @@ ul {
   padding: 0px;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .Home__navbar {
   min-height: 100vh;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5)));
