--- a/client/src/assests/css/footer.css
+++ b/client/src/assests/css/footer.css
@@ -205,9 +205,15 @@
 
 .copyright p:first-child {
   font-size: 1.5rem;
-  letter-spacing: .5px;
+  letter-spacing: 0.5px;
   padding-bottom: 1.25rem;
   font-weight: 600;
+}
+
+@media (max-width: 420px) {
+  .copyright p:first-child {
+    line-height: 150%;
+  }
 }
 
 .copyright p:last-child {
