--- a/client/src/index.css
+++ b/client/src/index.css
@@ -28,11 +28,15 @@ li {
 
 button:focus {
   -webkit-transform: translateY(0px);
+      -ms-transform: translateY(0px);
+       -o-transform: translateY(0px);
           transform: translateY(0px);
 }
 
 button:active {
   -webkit-transform: translateY(3px);
+      -ms-transform: translateY(3px);
+       -o-transform: translateY(3px);
           transform: translateY(3px);
 }
 
@@ -44,4 +48,3 @@ ul {
   margin: 0px;
   padding: 0px;
 }
-/*# sourceMappingURL=index.css.map */
