--- a/client/src/assests/css/editProfile.css
+++ b/client/src/assests/css/editProfile.css
@@ -40,6 +40,7 @@
   .EditProfile .register-box {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
   }
@@ -80,10 +81,11 @@
 .EditProfile .side {
   margin-top: 15px;
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
-/*# sourceMappingURL=editProfile.css.map */
