--- a/client/src/assests/css/sass/auth.scss
+++ b/client/src/assests/css/sass/auth.scss
@@ -51,7 +51,7 @@ html, body {
         display: none;
       }
       .file-input {
-        width: 43%;
+        width: 48%;
         padding: 15px;
         cursor: pointer;
         border: 1px solid #bbb;
@@ -66,6 +66,7 @@ html, body {
       @media (max-width: 900px) {
         width: 100%;
         margin: auto;
+        margin-top: 30px;
       }
       h3 {
         width: 80%;
