--- a/client/src/assests/css/home.css
+++ b/client/src/assests/css/home.css
@@ -250,3 +250,43 @@ ul {
 .sponsors .sponsor_img img:not(:first-child) {
   margin-left: 1rem;
 }
+
+@media (max-width: 772px) {
+  .Home__navbar .Home__banner_text {
+    padding: 2rem;
+    padding-top: 8vh;
+    padding-bottom: 8vh;
+  }
+  .Home__navbar .Home__banner_text-primary h1 {
+    font-size: 6rem;
+    padding-bottom: 1rem;
+    letter-spacing: 0px;
+  }
+  .Home__navbar .Home__banner_text-secondary h3 {
+    font-size: 3.5rem;
+    letter-spacing: 1px;
+  }
+  .Home__banner_countdown > div {
+    height: 12rem;
+    width: 12rem;
+    margin: 0.5rem 1rem;
+    border: 4px solid #0f3057;
+    border-radius: 0;
+    font-size: 2.5rem;
+  }
+  .Home__banner_countdown > div > p:last-child {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 500px) {
+  .Home__navbar .Home__banner_text {
+    padding: 2rem;
+    padding-top: 5vh;
+    padding-bottom: 5vh;
+  }
+  .Home__banner_countdown > div {
+    margin: 0.5rem .4rem;
+    border-radius: 10px;
+  }
+}
