--- a/client/src/assests/css/sass/auth.scss
+++ b/client/src/assests/css/sass/auth.scss
@@ -115,6 +115,12 @@
 .login_wrapper {
   min-height: 90vh;
 
+  @media (min-width: 600px) {
+    background: url(../images/25331.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+
   @media (max-width: 600px) {
     background-color: white;
   }
@@ -134,13 +140,13 @@
   .login_container {
     padding: 1.5rem 5rem;
     background-color: #fff;
-    border: 2px solid #eee;
     border-radius: 10px;
     padding-bottom: 3.4rem;
+    box-shadow: 2px 5px 10px gray;
 
     @media (max-width: 600px) {
       padding: 0.8rem 2rem;
-      border: none;
+      box-shadow: none;
     }
 
     .login_logo {
@@ -157,9 +163,9 @@
       p {
         text-align: center;
         margin-top: 0.5rem;
-        margin-bottom: 1.5rem;
+        margin-bottom: 1.7rem;
         font-size: 2.5rem;
-        color: #777;
+        color: #646464;
       }
     }
     p {
