--- a/client/src/assests/css/sass/home.scss
+++ b/client/src/assests/css/sass/home.scss
@@ -121,10 +121,10 @@
   .sponsor_img {
     width: 20%;
 
-    @media(max-width: 750px) {
+    @media (max-width: 750px) {
       width: 25%;
     }
-    @media(max-width: 500px) {
+    @media (max-width: 500px) {
       width: 33%;
     }
     display: flex;
@@ -138,6 +138,87 @@
       margin-bottom: 1.5rem;
       &:not(:first-child) {
         margin-left: 1rem;
+      }
+    }
+  }
+}
+
+@media (max-width: 772px) {
+  .Home {
+    &__navbar {
+      .Home__banner_text {
+        padding: 2rem;
+        padding-top: 8vh;
+        padding-bottom: 8vh;
+
+        &-primary {
+          h1 {
+            font-size: 6rem;
+            padding-bottom: 1rem;
+            letter-spacing: 0px;
+          }
+        }
+
+        &-secondary {
+          h3 {
+            font-size: 3.5rem;
+            letter-spacing: 1px;
+          }
+        }
+      }
+    }
+  }
+
+  .Home__banner_countdown {
+    > div {
+      height: 12rem;
+      width: 12rem;
+      margin: 0.5rem 1rem;
+      border: 4px solid #0f3057;
+
+      border-radius: 0;
+      font-size: 2.5rem;
+
+      > p {
+        &:last-child {
+          font-size: 1.5rem;
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 500px) {
+  .Home {
+    &__navbar {
+      .Home__banner_text {
+        padding: 2rem;
+        padding-top: 5vh;
+        padding-bottom: 5vh;
+
+        &-primary {
+          h1 {
+     
+          }
+        }
+
+        &-secondary {
+          h3 {
+            
+          }
+        }
+      }
+    }
+  }
+
+  .Home__banner_countdown {
+    > div {
+      margin: 0.5rem .4rem;
+      border-radius: 10px;
+
+      > p {
+        &:last-child {
+        }
       }
     }
   }
