--- a/client/src/assests/css/sass/auth.scss
+++ b/client/src/assests/css/sass/auth.scss
@@ -114,6 +114,7 @@
 
 .login_wrapper {
   min-height: 90vh;
+  padding-bottom: 5rem;
 
   @media (min-width: 600px) {
     background: url(../images/25331.jpg);
