--- a/client/src/assests/css/sass/contact.scss
+++ b/client/src/assests/css/sass/contact.scss
@@ -1,8 +1,8 @@
 @import '_main';
 
 .contact {
-  // background: white;
-
+  // background: linear-gradient(to bottom, #ffffff, #78dbff, #42b1fb);
+  
   &__nav {
   }
 
@@ -12,7 +12,7 @@
     user-select: none;
     h1 {
       font-family: 'Libre Franklin', sans-serif;
-      padding: 1.5rem 0.5rem;
+      padding: 1.5rem 0.5rem 1.2rem 0.5rem;
       text-align: center;
       font-weight: 600;
       font-size: 6rem;
@@ -84,7 +84,7 @@
         .textbox,
         .textarea {
           margin-bottom: 1.5rem;
-          padding-bottom: .5rem;
+          padding-bottom: 0.5rem;
           label {
             font-size: 2rem;
             letter-spacing: 0.5px;
@@ -111,7 +111,7 @@
           input,
           textarea {
             background-color: inherit;
-            margin-top: .7rem;
+            margin-top: 0.7rem;
             width: 95%;
             font-size: 2rem;
             padding: 5px 10px 5px 3px;
@@ -120,8 +120,6 @@
             transition: border-bottom 0.25s ease;
             color: #333;
 
-            
-
             &:focus,
             &:active {
               border: none;
@@ -129,7 +127,6 @@
               border-bottom: 2px solid #28b485;
             }
           }
-
         }
       }
     }
